Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-30188

Dragging an item with MouseArea is not smooth with a large drag threshold.

XMLWordPrintable

      MouseArea does not start dragging an item until after the mouse position has moved some minimum distance, but the distance to move the item is calculated relative to the press position. So when a drag starts the item will be moved a distance greater than the drag threshold in a single frame which can be visually jarring.

      Calculating the move position relative to the position of the mouse when the drag is detected means the item will not be moved further than the distance between two mouse events. Which is what Flickable does.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            andrew.den.exter Andrew den Exter
            andrew.den.exter Andrew den Exter
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes